# Carimbo

./: .gitignore  FEATURES.md  PROJECT.MD  README.md  colorpicker.html  index.html  package-lock.json  package.json  palette.html  radial.html  tsconfig.json  vite.config.ts
docs/: M0-verification.md  packaging.md
scripts/: package-portable.ps1
src/: colorpicker.ts  main.ts  palette.ts  radial.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: colorpicker.json  default.json  palette.json  radial.json
src-tauri/icons/: icon.icns
src-tauri/spikes/: focus.rs  hook.rs
src-tauri/src/: app_services.rs  clipboard_service.rs  expansion_service.rs  lib.rs  main.rs  paths.rs  state.rs  tray.rs
src-tauri/src/commands/: backup.rs  clipboard.rs  color.rs  expansion.rs  folders.rs  hotkey.rs  mod.rs  palette.rs  radial.rs  settings.rs  snippets.rs
src-tauri/src/core/: backup.rs  classify.rs  clock.rs  db.rs  error.rs  expansion.rs  import.rs  mod.rs  models.rs  region.rs  seed.rs  tokens.rs  transform.rs
src-tauri/src/core/migrations/: 0001_init.sql  0002_trigger_nocase.sql  0003_clip_content_type.sql  0004_snippet_html.sql
src-tauri/src/core/repo/: clip_repo.rs  folder_repo.rs  mod.rs  settings_repo.rs  snippet_repo.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/windows/: clipboard.rs  clipboard_monitor.rs  color_picker.rs  focus.rs  inject.rs  keyboard_hook.rs  keymap.rs  mod.rs  paste.rs  shell.rs  util.rs
src-tauri/tests/: clipboard_skip.rs  expansion_disambiguation.rs  keymap_thread_affinity.rs  persistence.rs
src/components/: ConfirmDialog.svelte  HotkeyRecorder.svelte  Icon.svelte  ImageLightbox.svelte  Modal.svelte  Onboarding.svelte  PromptDialog.svelte  RegionPicker.svelte  Toasts.svelte  Wordmark.svelte
src/lib/: api.ts  clips.ts  color.ts  events.ts  highlight.ts  retry.ts  theme.ts  time.ts  tokens.ts  types.ts
src/lib/i18n/: en.ts  index.ts  pt-BR.ts  store.svelte.ts
src/lib/stores/: clipboard.svelte.ts  settings.svelte.ts  snippets.svelte.ts
src/styles/: base.css  themes.css  tokens.css
src/views/colorpicker/: PickerOverlay.svelte
src/views/manager/: App.svelte  ClipActions.svelte  ClipboardHistory.svelte  ColorTools.svelte  FolderTree.svelte  Settings.svelte  SnippetEditor.svelte  SnippetList.svelte  TitleBar.svelte
src/views/palette/: ClipRow.svelte  Palette.svelte  ResultRow.svelte  RowMenu.svelte  VariableForm.svelte
src/views/radial/: Radial.svelte
website/: index.html  package-lock.json  package.json
website/src/: App.jsx  styles.css
